--- a/front-end/src/styles/scss/_variables.scss
+++ b/front-end/src/styles/scss/_variables.scss
@@ -8,3 +8,7 @@ $grey-lighten-3:#dbdbdb;
 $deep-purple:#673AB7;
 $deep-purple-lighten-5:#EDE7F6;
 $deep-purple-lighten-1:#7E57C2;
+
+
+$deep-purple-darken-1:#5E35B1;
+$deep-purple-darken-4:#311B92;
