최근게임전적 영역 마크업

--- a/front-end/src/styles/scss/_variables.scss
+++ b/front-end/src/styles/scss/_variables.scss
@@ -2,6 +2,10 @@
 $white:#fff;
 $black:#000;
 $grey:#666;
+
+$red:#e60d0d;
+$blue:#0039d8;
+
 $grey-lighten-1:#999;
 $grey-lighten-2:#888;
 $grey-lighten-3:#dbdbdb;
