--- a/front-end/src/styles/scss/_variables.scss
+++ b/front-end/src/styles/scss/_variables.scss
@@ -11,6 +11,9 @@ $grey-lighten-2:#888;
 $grey-lighten-3:#dbdbdb;
 $deep-purple:#673AB7;
 $deep-purple-lighten-5:#EDE7F6;
+
+$deep-purple-lighten-4:#D1C4E9;
+
 $deep-purple-lighten-1:#7E57C2;
 
 
