--- a/front-end/src/styles/scss/_components.scss
+++ b/front-end/src/styles/scss/_components.scss
@@ -10,6 +10,7 @@
     font-size:1.4rem;
     font-weight:700;
     outline:0;
+    border:1px solid $deep-purple-lighten-1;
     border-radius:.3rem;
     transition: all .2s;
 
@@ -21,6 +22,3 @@
         background-color:$deep-purple-lighten-1;
     }
 }
-
-/* box */
-
