--- a/front-end/src/styles/scss/_extends.scss
+++ b/front-end/src/styles/scss/_extends.scss
@@ -8,7 +8,6 @@
     box-sizing:border-box;
     position: relative;
     background-color:$white;
-
     box-shadow:.1rem .1rem .2rem rgba(0,0,0,0.25);
 
     .top--area{
@@ -64,6 +63,43 @@
                     font-size:1.4rem;
                     text-decoration: none;
                 }
+
+                &.on a{
+                    font-weight:700;
+                }
+            }
+        }
+    }
+
+    .bottom--area{
+        border-top:1px solid $grey-lighten-3;
+
+        a{
+            text-align:center;
+            display:block;
+            padding:1.2rem 0;
+            color:$black;
+            font-size:1.4rem;
+            font-weight:700;
+            text-decoration:none;
+            opacity: .6;
+            background-color:$grey-lighten-3;
+            transition:all .2s;
+
+            &:hover{
+                opacity: 1;
+            }
+
+            span{
+                position: relative;
+                display: inline-block;
+                padding-right:2.5rem;
+
+                i{
+                    position: absolute;
+                    top:-.5rem;
+                    right:0;
+                }
             }
         }
     }
@@ -76,12 +112,9 @@
         tr{
             th{
                 padding:1.2rem 0 1rem;
+                color:$white;
                 font-size:1.2rem;
                 font-weight:700;
-
-                // border-bottom:2px solid #dbdbdb;
-                
-                color:$white;
                 background-color:$deep-purple-darken-1;
             }
         }
