--- a/front-end/src/styles/scss/_components.scss
+++ b/front-end/src/styles/scss/_components.scss
@@ -17,7 +17,7 @@
         opacity:.8;
     }
 
-    &.type--01{
+    &.type-01{
         border:1px solid $deep-purple-lighten-1;
         background-color:$deep-purple-lighten-1;
     }
