--- a/back-end/views/layout.jade
+++ b/back-end/views/layout.jade
@@ -1,7 +1,13 @@
 doctype html
 html
   head
-    title= title
+    title GLOL - Good Game League Of Legend
+
+    meta(charset="utf-8")
+    meta(http-equiv="X-UA-Compatible", content="IE=edge")
+    meta(name="viewport", content="width=device-width,initial-scale=1.0")
+
+    link(rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Material+Icons')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    block content
+    block main-page
