--- a/back-end/public/stylesheets/style.scss
+++ b/back-end/public/stylesheets/style.scss
@@ -14,6 +14,7 @@ html {
 }
 
 body {
+    position: relative;
     min-width: 32rem;
 }
 
@@ -23,20 +24,27 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-.header {
-    // z-index: 1000;
-    // position: fixed;
-    // top: 0;
-    // left: 0;
-    // width: 100%;
+.area-half {
+    height:50%;
+    background-color: $deep-purple;
+}
+
+.box-center {
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%, -50%);
+    width: 50rem;
+
     .header-top {
         @extend %float-clear;
-        position: relative;
-        padding: 1rem 2rem;
-        background-color: $deep-purple;
+        position: absolute;
+        top:-5rem;
+        left:0;
+        width:100%;
+
         .left-area {
-            @extend %float-clear;
-            float: left;
+            float:left;
             h1 {
                 float: left;
                 margin-top: 1rem;
@@ -101,23 +109,19 @@ body {
                 }
             }
         }
-    }
-}
 
-.box-center {
-    margin: 0 auto;
-    width: 40rem;
-    height: 10rem;
-    .txt {
-        p {
-            line-height: 2rem;
-            font-size: 1.4rem;
+        .right-area{
+            float:right;
+            margin-top:1.2rem;
+            line-height:2rem;
+            color:$white;
+            font-size:1.6rem;
+            font-weight:700;
         }
     }
+
     .box-search {
         @extend %float-clear;
-        margin-top: 2rem;
-        width: 100%;
         .search {
             position: relative;
             i {
@@ -126,20 +130,20 @@ body {
                 top: 1rem;
                 left: 1rem;
                 color: $grey-lighten-3;
+                font-size:3rem;
             }
             input {
                 display: inline-block;
                 box-sizing: border-box;
-                padding: 2rem 1rem 2rem 4.5rem;
+                padding: 1rem 6rem 1rem 5rem;
                 width: 100%;
-                height: 1.8rem;
+                height: 5rem;
                 line-height: 1.8rem;
-                color: $white;
+                color: $black;
                 font-size: 1.6rem;
                 outline: none;
                 border: none;
                 border-radius: 0.2rem;
-                opacity: .8;
                 background-color: $white;
                 box-shadow: 0 .1rem .2rem rgba(0, 0, 0, 0.25);
                 transition: all .2s;
@@ -166,6 +170,12 @@ body {
                         color: $grey-lighten-1;
                     }
                 }
+            }
+            .btn{
+                position: absolute;
+                top:.7rem;
+                right:1rem;
+                padding:.8rem 1.2rem;
             }
         }
     }
