--- a/back-end/views/index.jade
+++ b/back-end/views/index.jade
@@ -1,6 +1,6 @@
 extends layout
 
-block main-page
+block content
     div.area-half
     div.box-center
         header.header-top
@@ -18,6 +18,7 @@ block main-page
                 div.right-area LOL 전적분석 사이트
         div.box-search
             div.search
-                i.material-icons search
-                input(placeholder='소환사명을 입력해주세요')
-                button.btn.type-02 GO
+                form(action='/summoner' method='post')
+                    i.material-icons search
+                    input(placeholder='소환사명을 입력해주세요' name="nick_name")
+                    button.btn.type-02 GO
